updated surgery blog post

--- a/_posts/2019-05-08-about-me.md
+++ b/_posts/2019-05-08-about-me.md
@@ -3,6 +3,20 @@ layout: default
 title:  "About me"
 ---
 
-Hi I am ___Himanshu Mittal___, a software engineer by profession and a generally curious creature. Never had any major downs in life untill recently when my father had a major heart surgery. It was the hardest 2 months of my life. 
+Hi I am ___Himanshu Mittal___, a software engineer by profession and a generally curious creature. 
+You can say that uptill December 2018 I was a pretty carefree boy busy with his games and his job as a Software Engineer. I had never had any major downs in life untill on December 27 2018 my father was admitted for emergency surgery for Acute Standford Type A Aortic Dissection. The doctors at Fortis Vasant Kunj diagnosed the dissection and arranged for immediate transfer to Fortis Escorts Heart Institute Okhla where my father underwent Bentall Surgery under the team of Dr Z.S Meherwal. Dr Meherwal had informed me and my mother along with 2 of my uncles that it is a high risk surgery with low chances of success involving the Aorta(the main artery that carries pure blood from the heart to the rest of the body) and it's branches.
+For a moment I and my mother broke down but that was a time to make a decision and we signed on the consents needed for the surgery.
+My father needed immediate dialysis as he also had Acute Renal Failure and nil Urine Output before the surgery.
+I spent the cold December night before the surgery on a bench in the Emergency Section of Fortis Escorts. All I could think of was "Give me one more chance! I wil make everything alright!". My mother and Bhavnesh Chachu my father's younger brother were also there that night in the hospital. All we did that night was pray ceaselessly, and just not think out about anything that the Doctor had said about the risks of the surgery. Positivity and hope were our only choice and I clinged on to every last bit of hope. I kept reciting the Maha Mrityunjay Mantra a mantra decdicated to Lord Shiva the giver of life asking him to free us of all bodily pains. That night was the longest night of my 23 year long life. 
+The next day after all the preop tasks were completed the surgery began and went on for about 10 hours. After which we were informed that the surgery was successful and my father will be kept under sedation on a ventillator(breathing machine) connected through an EndoTracheal Tube. We were also told that his liver and kidney functions are deranged and that he will need futher dialysis as his serum creatinine levels were high.
+On Sunday the ventillator was removed and my father was finally able to move his mouth and try to speak to us.
+His whole body had fluid retention and swelling and his nodes (10 fingers and 10 nodes) were all bluish black in color due to peripheral cyanosis.
+Looking at him in a state like that shook me but I don't know how I also had the strength to stay positive that things will get better and this time will pass. I did not cry though I was always anxious and scared about our future as a family.
+What followed was a 2 month long stay at the hospital for my father. He had to be reventillated and was also given CPR once to stabilize because of his oxygen saturation levels falling and doctors also told us that since the entrotracheal tube is highly discomforting for the patient and inserting it again and again and for prolonged periods has risk of injury they will need to perform a "Tracheostomy" procedure to connect the ventillator through a whole in the Trachea made through the neck.
+The procedure was done and father was now breathing through the ventillator attached through the Tracheostomy.
+Minimum pressure support ventillation and T-Piece trials for spontaneous breathing followed and as things the doctors decided to close the Tracheostomy.
+By God's grace my father's creatinine levels also started coming down as his kidney function improved but for some reason his Haemoglobin levels were still very low at times reaching the 6.5-7 range. 
+Whenever the hameoglobin level fell that low the doctors had to tranfuse blood. This happened 3-4 times if I recall correctly and the only question me my mother, my sister and my relatives had was how many blood transfusions will they continue to do considering he already had multiple units tranfused during the operation. 
+But Dr Karlekar Incharge of Post-op recovery
 Setting up this page as an experiment with Github Pages. Will be adding more content soon. Might make it a full fledged blog.
 Cheers.
