updated blog post related to surgery

--- a/_posts/2019-05-08-about-me.md
+++ b/_posts/2019-05-08-about-me.md
@@ -5,9 +5,9 @@ title:  "About me"
 
 Hi I am ___Himanshu Mittal___, a software engineer by profession and a generally curious creature. 
 You can say that uptill December 2018 I was a pretty carefree boy busy with his games and his job as a Software Engineer. I had never had any major downs in life untill on December 27 2018 my father was admitted for emergency surgery for Acute Standford Type A Aortic Dissection. The doctors at Fortis Vasant Kunj diagnosed the dissection and arranged for immediate transfer to Fortis Escorts Heart Institute Okhla where my father underwent Bentall Surgery under the team of Dr Z.S Meherwal. Dr Meherwal had informed me and my mother along with 2 of my uncles that it is a high risk surgery with low chances of success involving the Aorta(the main artery that carries pure blood from the heart to the rest of the body) and it's branches.
-For a moment I and my mother broke down but that was a time to make a decision and we signed on the consents needed for the surgery.
+For a moment I and my mother broke down in tears but that was a time to make a decision and we signed on the consents needed for the surgery.
 My father needed immediate dialysis as he also had Acute Renal Failure and nil Urine Output before the surgery.
-I spent the cold December night before the surgery on a bench in the Emergency Section of Fortis Escorts. All I could think of was "Give me one more chance! I wil make everything alright!". My mother and Bhavnesh Chachu my father's younger brother were also there that night in the hospital. All we did that night was pray ceaselessly, and just not think out about anything that the Doctor had said about the risks of the surgery. Positivity and hope were our only choice and I clinged on to every last bit of hope. I kept reciting the Maha Mrityunjay Mantra a mantra decdicated to Lord Shiva the giver of life asking him to free us of all bodily pains. That night was the longest night of my 23 year long life. 
+I spent the freezing December night before the surgery on a bench in the Emergency Section of Fortis Escorts. All I could think of was "Give me one more chance! I wil make everything alright!". My mother and Bhavnesh Chachu my father's younger brother were also there that night in the hospital. All we did that night was pray ceaselessly, and just not think out about anything that the Doctor had said about the risks of the surgery. Positivity and hope were our only choice and I clinged on to every last bit of hope. I kept reciting the Maha Mrityunjay Mantra a mantra decdicated to Lord Shiva the giver of life asking him to free us of all bodily pains. My uncle also helped me remain calm in that time of sheer uncertainty. He said that it is the Doctor's job to tell you about all the risks as clearly as possible to make sure that they aren't blamed if anything goes wrong and in doing their job they sometimes tend to exaggerate and not care about the emotions of the patient's family. He also said that Dr Meherwals' frank and emotionless nature is also essential for any surgeon to stay focussed. I spent the night thinking about all that I'd do to get my life back and for this to never have happened but it was the truth. That night was the longest night of my 23 year long life. 
 The next day after all the preop tasks were completed the surgery began and went on for about 10 hours. After which we were informed that the surgery was successful and my father will be kept under sedation on a ventillator(breathing machine) connected through an EndoTracheal Tube. We were also told that his liver and kidney functions are deranged and that he will need futher dialysis as his serum creatinine levels were high.
 On Sunday the ventillator was removed and my father was finally able to move his mouth and try to speak to us.
 His whole body had fluid retention and swelling and his nodes (10 fingers and 10 nodes) were all bluish black in color due to peripheral cyanosis.
@@ -17,6 +17,12 @@ The procedure was done and father was now breathing through the ventillator atta
 Minimum pressure support ventillation and T-Piece trials for spontaneous breathing followed and as things the doctors decided to close the Tracheostomy.
 By God's grace my father's creatinine levels also started coming down as his kidney function improved but for some reason his Haemoglobin levels were still very low at times reaching the 6.5-7 range. 
 Whenever the hameoglobin level fell that low the doctors had to tranfuse blood. This happened 3-4 times if I recall correctly and the only question me my mother, my sister and my relatives had was how many blood transfusions will they continue to do considering he already had multiple units tranfused during the operation. 
-But Dr Karlekar Incharge of Post-op recovery
-Setting up this page as an experiment with Github Pages. Will be adding more content soon. Might make it a full fledged blog.
-Cheers.
+But Dr Karlekar Incharge of Post-op recovery with his team of Dr Vikas, Dr Khushboo, Dr Ashish kept us calm and told us that the low Hb levels were due Anaemia of Chronic Disease a condition where the body stores iron instead of actively using it to produce blood so that microbes which feed on the iron are starved of it. 
+At one point we even thought of bringing in a Haematologist to recommend what the next step should but the Hb levels stabilized.
+The biggest life saver and also the biggest hurdle for my father's recovery was the ventillator. It was essential for my father to maintain Oxygen Saturation without the Ventillator and he was able to do so but sudden incidents of Tachypnoea or rapid breathing and fall in saturation prompted the doctors to keep falling back to pressure support ventillation.
+We questioned the doctors of the reason for these Tachypnoeic incidents and even they had no clear explanation except that he needs to clear the secretions being produced in the lungs to improve his breathing and that as his cough strength improves and as the antibiotics manage to suppress the lung infections his breathing will improve.
+Finally he was shifted to ward no. 401 from Recovery Ward on the T-piece itself. We were all really happy and so were the doctors that my father will finally leave the dreaded ICU and be in a room where he will have the freedom to be ambulated and use the washroom and the ofcourse most importantly stay permanently with his family members.
+I took my father's phone, the newspaper his spectacles, headphones, apples and everything my mother sister and I could think of taking so as to make my father feel at home and to get him back to his usual self who always enjoys a Sudoku puzzle in the newspaper over anything else.
+Even the staff and doctors of the Recovery were all concerned about Dr Dushyant Mittal the patient in Room 401 who had stayed in their recovery room for about 1.5 months. Dr Karlekar 
+<!-- Setting up this page as an experiment with Github Pages. Will be adding more content soon. Might make it a full fledged blog.
+Cheers. -->
