first draft of surgery post done

--- a/_posts/2019-05-08-about-me.md
+++ b/_posts/2019-05-08-about-me.md
@@ -4,7 +4,14 @@ title:  "About me"
 ---
 
 Hi I am ___Himanshu Mittal___, a software engineer by profession and a generally curious creature. 
-You can say that uptill December 2018 I was a pretty carefree boy busy with his games and his job as a Software Engineer. I had never had any major downs in life untill on December 27 2018 my father was admitted for emergency surgery for Acute Standford Type A Aortic Dissection. The doctors at Fortis Vasant Kunj diagnosed the dissection and arranged for immediate transfer to Fortis Escorts Heart Institute Okhla where my father underwent Bentall Surgery under the team of Dr Z.S Meherwal. Dr Meherwal had informed me and my mother along with 2 of my uncles that it is a high risk surgery with low chances of success involving the Aorta(the main artery that carries pure blood from the heart to the rest of the body) and it's branches.
+You can say that uptill December 2018 I was a pretty carefree young man busy with his games and his job as a Software Engineer. I had never had any major downs in life untill when on December 27 2018, my father was admitted for emergency surgery for Acute Standford Type A Aortic Dissection. 
+On December 27 at first my father experienced intense back pain and stomach ache for which he was admitted to Safdurjung Hospital in the morning. There he was given general medications like Pantocid and when he felt better he was discharged. In the evening my father and mother travelled in an Uber everything seemed well.
+But it was in the midnight that my sister saw my father becoming unconscious as he went to drink some water. She shouted and my mother and I came running not knowing what had happened and what we were supposed to do. It took me way longer than others to calm my nerves and snap back to reality that my father needed immediate medical attention. So with the help of our neighnours Mr Anil and his wife Deepa and their nephew we drove my father to Safdurjung Hospital which was the nearest hospital to our house and the place my mother worked.
+There multiple tests of Trop-T to detect heart attack came out negative which made the diagnosis difficult. Miocardial Infarction was suspected. My father was put on Ionotropes to maintain his blood pressure. The doctors at Safdurjung suggested a Cardiac Call but since there were no beds available in Safdurjung Cardiac ICU my mother, my aunt Neetu and my uncle Ashok (mausi ji and mausa ji) decided that we should shift to a private hospital.
+They contacted Fortis Emergency and called the Cardiac Ambulance. 
+Time would later tell us the criticality of that decision at that point of time and I still believe something was watching over us then.
+After the shifting to Fortis Vasant Kunk was complete the doctors there informed us that he will be with the Crtical Care Team in the ICU and that they will keep us updated.
+The doctors at Fortis Vasant Kunj diagnosed the dissection and arranged for immediate transfer to Fortis Escorts Heart Institute Okhla where my father underwent Bentall Surgery under the team of Dr Z.S Meherwal. Dr Meherwal had informed me and my mother along with 2 of my uncles that it is a high risk surgery with low chances of success involving the Aorta(the main artery that carries pure blood from the heart to the rest of the body) and it's branches.
 For a moment I and my mother broke down in tears but that was a time to make a decision and we signed on the consents needed for the surgery.
 My father needed immediate dialysis as he also had Acute Renal Failure and nil Urine Output before the surgery.
 I spent the freezing December night before the surgery on a bench in the Emergency Section of Fortis Escorts. All I could think of was "Give me one more chance! I wil make everything alright!". My mother and Bhavnesh Chachu my father's younger brother were also there that night in the hospital. All we did that night was pray ceaselessly, and just not think out about anything that the Doctor had said about the risks of the surgery. Positivity and hope were our only choice and I clinged on to every last bit of hope. I kept reciting the Maha Mrityunjay Mantra a mantra decdicated to Lord Shiva the giver of life asking him to free us of all bodily pains. My uncle also helped me remain calm in that time of sheer uncertainty. He said that it is the Doctor's job to tell you about all the risks as clearly as possible to make sure that they aren't blamed if anything goes wrong and in doing their job they sometimes tend to exaggerate and not care about the emotions of the patient's family. He also said that Dr Meherwals' frank and emotionless nature is also essential for any surgeon to stay focussed. I spent the night thinking about all that I'd do to get my life back and for this to never have happened but it was the truth. That night was the longest night of my 23 year long life. 
@@ -17,12 +24,29 @@ The procedure was done and father was now breathing through the ventillator atta
 Minimum pressure support ventillation and T-Piece trials for spontaneous breathing followed and as things the doctors decided to close the Tracheostomy.
 By God's grace my father's creatinine levels also started coming down as his kidney function improved but for some reason his Haemoglobin levels were still very low at times reaching the 6.5-7 range. 
 Whenever the hameoglobin level fell that low the doctors had to tranfuse blood. This happened 3-4 times if I recall correctly and the only question me my mother, my sister and my relatives had was how many blood transfusions will they continue to do considering he already had multiple units tranfused during the operation. 
-But Dr Karlekar Incharge of Post-op recovery with his team of Dr Vikas, Dr Khushboo, Dr Ashish kept us calm and told us that the low Hb levels were due Anaemia of Chronic Disease a condition where the body stores iron instead of actively using it to produce blood so that microbes which feed on the iron are starved of it. 
+But Dr Karlekar Incharge of Post-op recovery with his team of Dr Vikas, Dr Khushboo, Dr Ashish and others kept us calm and told us that the low Hb levels were due Anaemia of Chronic Disease a condition where the body stores iron instead of actively using it to produce blood so that microbes which feed on the iron are starved of it. 
 At one point we even thought of bringing in a Haematologist to recommend what the next step should but the Hb levels stabilized.
 The biggest life saver and also the biggest hurdle for my father's recovery was the ventillator. It was essential for my father to maintain Oxygen Saturation without the Ventillator and he was able to do so but sudden incidents of Tachypnoea or rapid breathing and fall in saturation prompted the doctors to keep falling back to pressure support ventillation.
 We questioned the doctors of the reason for these Tachypnoeic incidents and even they had no clear explanation except that he needs to clear the secretions being produced in the lungs to improve his breathing and that as his cough strength improves and as the antibiotics manage to suppress the lung infections his breathing will improve.
 Finally he was shifted to ward no. 401 from Recovery Ward on the T-piece itself. We were all really happy and so were the doctors that my father will finally leave the dreaded ICU and be in a room where he will have the freedom to be ambulated and use the washroom and the ofcourse most importantly stay permanently with his family members.
 I took my father's phone, the newspaper his spectacles, headphones, apples and everything my mother sister and I could think of taking so as to make my father feel at home and to get him back to his usual self who always enjoys a Sudoku puzzle in the newspaper over anything else.
-Even the staff and doctors of the Recovery were all concerned about Dr Dushyant Mittal the patient in Room 401 who had stayed in their recovery room for about 1.5 months. Dr Karlekar 
+Even the staff and doctors of the Recovery were all concerned about Dr Dushyant Mittal the patient in Ward 401 who had stayed in their recovery room for about 1.5 months. Dr Karlekar visited him to check his status and after few days of ambulation and maintaining saturations on T-piece even though there were lot of secretions still coming out of the lungs it was decided that since my father had a good cough strength now he was ready for removal of the Tracheostomy tube.
+At this point I would also like to mention Suryabhan the physiotherapist incharge of patients in Cardiac Recovery. Unlike with all the other patients he also developed a special connection with our family as he saw how we had faced tough times together and how my father had persevered through all the pain.
+In the recovery room as well as in the Ward he was the one that got my father ambulated and walking on his own two feet. His experience told him that chest physiotherapy is vital for cardiac surgery patients as lung congestions lead to complications. So he made sure that my father did his breathing exercises with the Spirometer, received patting on his back and chest vibrator to mobilize the secretions congesting the lungs. He definitely made a special contribution to my father's recovery.
+The tracheostomy tube was finally removed and the wound wrapped tightly shut which allowed my father to speak clearly.
+Relatives visited my father as his condition improved. 
+Finally in these 2 months where the train of our entire family life seemed to have derailed came a time where things seemed to be getting on track.
+The graph which kept going up and down throughout my father's stay was finally steady if not increasing.
+And then came the day of the discharge. 
+This photo taken on the day of the discharge is the most precious photograph of my life.
+
+We had lot of plans of things to do when my father would be back home. Getting him completely back to his former self was our target. Regular physiotherapy, healthy diet, all medications on proper time according the discharge summary. We were all set to go home with my father as a family after 2 months. 
+
+Through this post I wanted to jot down my feelings and what I went through during the period of my father's 2 month stay at the Hospital and how during this period my faith in God and in medical science and in humanity was reinstated.
+To all the doctors, nurses, workers, physiotherapists involved in the treatment of my father and thousands of other patients a heartfelt thank you is all I can say. Continue to save lives and reinstill people's faith and restore families.
+To all the relatives who supported us during that time specially Neetu Mausi, Khusbhoo Didi, Ashok Mausaji and all others I am grateful and will forever wish you all well in your life and may noone face a situation remotely similar to ours.
+
+Jai Hanuman ji.
+
 <!-- Setting up this page as an experiment with Github Pages. Will be adding more content soon. Might make it a full fledged blog.
 Cheers. -->
